--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,10 +60,3 @@ $raleway: Raleway, Arial, sans-serif;
     @content;
   }
 }
-
-// only for webkit browsers
-@mixin webkit-browsers {
-  @media only screen and (-webkit-min-device-pixel-ratio: 0) {
-    @content;
-  }
-}
