--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -152,7 +152,7 @@ nav {
   }
 
   nav a {
-    color: $lightGray;
+    color: $smoke;
 
     &:hover {
       color: $gray;
@@ -164,9 +164,9 @@ nav {
   }
 }
 
-/**************/
-/* NAVIGATION */
-/**************/
+/***************/
+/* MOBILE-MENU */
+/***************/
 
 #mobile-menu-toggle {
   display: none;
@@ -184,7 +184,7 @@ nav {
   width: 100%;
 
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center center;
   -webkit-background-size: cover;
      -moz-background-size: cover;
@@ -225,25 +225,7 @@ nav {
 /* MAIN */
 /********/
 
-.main {
-  .entry p {
-    text-align: left;
-  }
 
-  .center-header {
-    text-align: center;
-  }
-
-  .main-article {
-    display: block;
-    margin: 0 auto 3rem;
-    max-width: 56.25rem;
-  }
-
-  .main-title {
-    text-align: center;
-  }
-}
 
 /**********/
 /* FOOTER */
@@ -324,6 +306,7 @@ footer {
   }
 }
 
+@import "pages";
 @import "posts";
 @import "responsive";
 @import "svg-icons";
